fixed scrolling issue, spacing

--- a/css/style.css
+++ b/css/style.css
@@ -51,37 +51,35 @@ code, .input{
 .code.block{
       user-select: all;
       cursor: text;
-      /* background-color: rgba(211, 211, 211, 0.1); */
       padding: 10px;
       border: var(--bs-card-border-width) solid var(--bs-card-border-color);
       border-radius: var(--bs-border-radius);
       overflow-x: auto;
+      white-space: nowrap;
 }
 
 .code pre{
+      display: inline;
       font-family: 'Roboto Mono', monospace;
       font-size: 0.875em;
       color: var(--bs-code-color);
       margin: 0;
-      overflow-x: inherit;
 }
 
 .code .input{
+      display: inline;
       cursor: default;
       user-select: none;
-      /* font-size: 0.875em; */
-      overflow-x: inherit;
-
 }
 
 .code .comment{
+      display: inline;
       cursor: default;
       user-select: none;
       font-size: 0.875em;
       font-family: 'Roboto Mono', monospace;
       color: rgb(165, 165, 165);
       text-wrap: wrap;
-      overflow-x: inherit;
 }
 
 
